# Spinor_BEC_dynamics

./: CMakeLists.txt  README.md  evolution.hpp  main.cpp
